# InfinitePickaxe

./: .env.example  .gitignore  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
MVP-Phase1/GDD/: GDD_InfinitePickaxe.md
MVP-Phase1/TDD/: TDD_Client.md  TDD_DatabaseSchema.md  TDD_NetworkProtocol.md  TDD_SystemArchitecture.md
MVP-Phase1/metadata/: daily_missions.json  minerals.json
auth-server/: Dockerfile  README.md  package-lock.json  package.json
auth-server/src/: app.js  config.js
auth-server/src/db/: index.js
auth-server/src/routes/: auth.js  bootstrap.js
auth-server/src/services/: googleAuth.js  jwtService.js
auth-server/src/store/: dbUsers.js  memoryUsers.js  refreshTokens.js  sessionHistory.js
database/: README.md
database/auth_schema/: schema.md  schema.sql
database/auth_schema/migrations/: 20251212_provider_external_id.sql  20251212_users_remove_device_session_redefine.sql
database/game_schema/: migration_add_current_mineral.sql  schema.md  schema.sql
database/game_schema/migrations/: 001_add_pity_bonus.sql  migration_add_attack_stats.sql
game-server/: CMakeLists.txt  Dockerfile
game-server/src/: config.h  main.cpp
game-server/src/metadata/: metadata_loader.cpp  metadata_loader.h
game-server/src/server/: ad_repository.cpp  ad_repository.h  ad_service.cpp  ad_service.h  auth_service.cpp  auth_service.h  connection_pool.cpp  connection_pool.h  connection_rate_limiter.cpp  connection_rate_limiter.h  db_client.cpp  db_client.h  game_repository.cpp  game_repository.h  gem_repository.cpp  gem_repository.h  gem_service.cpp  gem_service.h  http_auth_client.cpp  http_auth_client.h  message_router.cpp  message_router.h  mining_repository.cpp  mining_repository.h  mining_service.cpp  mining_service.h  mission_repository.cpp  mission_repository.h  mission_service.cpp  mission_service.h  offline_repository.cpp  offline_repository.h  offline_service.cpp  offline_service.h  redis_client.cpp  redis_client.h  session.cpp  session.h  session_registry.cpp  session_registry.h  (+12 more)
metadata/: README.md  ads.json  build_meta_bundle.js  csv_to_json.js  daily_missions.json  gem_conversion.json  gem_definitions.json  gem_discard.json  gem_gacha.json  gem_grades.json  gem_inventory.json  gem_slot_unlock_costs.json  gem_synthesis_rules.json  gem_types.json  json_to_csv.js  meta_bundle.json  minerals.json  mission_reroll.json  offline_defaults.json  pickaxe_levels.json  upgrade_rules.json
metadata/csv/: README.md  ads.csv  ads_config.csv  daily_missions.csv  daily_missions_config.csv  daily_missions_milestones.csv  gem_conversion_costs.csv  gem_definitions.csv  gem_discard_rewards.csv  gem_gacha_costs.csv  gem_gacha_rates.csv  gem_grades.csv  gem_inventory_config.csv  gem_slot_unlock_costs.csv  gem_synthesis_rules.csv  gem_types.csv  minerals.csv  mission_reroll.csv  offline_defaults.csv  pickaxe_levels.csv  upgrade_base_rates.csv  upgrade_rules_config.csv  upgrade_rules_tier_rates.csv
pickaxe-client/: google-services.json
pickaxe-client/Assets/: google-services.json
pickaxe-client/Assets/AuthTests/: FirebaseGoogleAuthTester.cs
pickaxe-client/Assets/Firebase/Editor/: AppDependencies.xml  AuthDependencies.xml  FirebaseAuth_version-13.6.0_manifest.txt
pickaxe-client/Assets/Plugins/Android/: mainTemplate.gradle  settingsTemplate.gradle
pickaxe-client/Assets/Resources/: ClientConfigAsset.asset  config.json
pickaxe-client/Assets/Resources/Config/: auth_config.json
pickaxe-client/Assets/Resources/UI/: DamageText.prefab  GemActionListModal.prefab  GemDiscardModal.prefab  GemEquipModal.prefab  GemInventoryExpandConfirmModal.prefab  GemInventoryExpandResultModal.prefab  GemPanel.prefab  GemShopSubTab.prefab  GemSlotItemTemplate.prefab  GemSlotUnlockModal.prefab  IAPShopSubTab.prefab  InputFieldModal.prefab  MineralItemTemplate.prefab  MissionCard.prefab  Modal.prefab  PickaxeInfoModal.prefab  PickaxeSlot.prefab  PickaxeSlot1.prefab  PickaxeSlotUnlockModal.prefab  UpgradeTab.prefab
pickaxe-client/Assets/Scenes/: BootStrap.unity  GAME_SETUP_GUIDE.md  Game.unity  SampleScene.unity  TAB_CREATION_GUIDE.md  Title.unity
pickaxe-client/Assets/Scripts/Core/: AuthConfig.cs
pickaxe-client/Assets/Scripts/Editor/: BootstrapSceneBuilder.cs  GameTabCreator.cs  ProtocolGenerator.cs  TMPFontChanger.cs
pickaxe-client/Assets/Scripts/Runtime/Auth/: AndroidSecureStorage.cs  AuthResult.cs  AuthSessionService.cs  AuthTokens.cs  BackendAuthClient.cs  GoogleFirebaseAuthService.cs  ITokenStorage.cs  JwtUtils.cs  PlayerPrefsTokenStorage.cs  SecureStorageTokenStorage.cs
pickaxe-client/Assets/Scripts/Runtime/Bootstrap/: BootstrapFlowController.cs  ClientBootstrap.cs
pickaxe-client/Assets/Scripts/Services/: GoogleAuthService.cs
pickaxe-client/Assets/Scripts/UI/: AuthTestUI.cs
pickaxe-client/Assets/Settings/: GoogleSignInSetup.md
pickaxe-client/ProjectSettings/: AndroidResolverDependencies.xml  EditorBuildSettings.asset  GvhProjectSettings.xml  ProjectSettings.asset  QualitySettings.asset
pickaxe-client/infinitepickaxe_BurstDebugInformation_DoNotShip/tempburstlibs/arm64-v8a/: lib_burst_generated.txt
pickaxe-client/infinitepickaxe_BurstDebugInformation_DoNotShip/tempburstlibs/armeabi-v7a/: lib_burst_generated.txt
pickaxe-client/pickaxeclient_BurstDebugInformation_DoNotShip/tempburstlibs/arm64-v8a/: lib_burst_generated.txt
protocol/: README.md  auth_api.md  game.proto
tools/: download-protoc.ps1
(+64 files in other folders)
